# Bawalchatbot

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  Taskfile.yml
.gemini/: workflow.md
.gemini/workflows/: debugger.json  documentation.json  ui_builder.json  web_builder.json
history/: test1  test2
scripts/: agent_gateway.py  setup_model.py
src/: CMakeLists.txt  dataset.json  main.cpp  main_cli.cpp
src/data/: dataset.json  parser.csv
src/include/: context.hpp  lexer.hpp  llama.h  llama_engine.hpp  parser.hpp  semantic.hpp  token.hpp
src/src/: lexer.cpp  llama_engine.cpp  parser.cpp  semantic.cpp  token.cpp
tests/cli/: input.txt
tests/ui/: test_parser.cpp
www/bawalchatbox/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
www/bawalchatbox/electron/: index.ts  main.ts  preload.ts
www/bawalchatbox/src/: App.tsx  index.css  main.tsx  types.ts
www/bawalchatbox/src/style/: App.css  index.css
